@@ -71,59 +71,65 @@ static P *getto(P *p, P *cur, P *top, long int line)
 
 int mid = 0;
 
-void bwfllw(BW *w)
+/* For hex */
+
+void bwfllwh(BW *w)
+{
+	/* Top must be a muliple of 16 bytes */
+	if (w->top->byte%16) {
+		pbkwd(w->top,w->top->byte%16);
+	}
+
+	/* Move backward */
+	if (w->cursor->byte < w->top->byte) {
+		long new_top = w->cursor->byte/16;
+		if (mid) {
+			if (new_top >= w->h / 2)
+				new_top -= w->h / 2;
+			else
+				new_top = 0;
+		}
+		if (w->top->byte/16 - new_top < w->h)
+			nscrldn(w->t->t, w->y, w->y + w->h, (int) (w->top->byte/16 - new_top));
+		else
+			msetI(w->t->t->updtab + w->y, 1, w->h);
+		pgoto(w->top,new_top*16);
+	}
+
+	/* Move forward */
+	if (w->cursor->byte >= w->top->byte+(w->h*16)) {
+		long new_top;
+		if (mid) {
+			new_top = w->cursor->byte/16 - w->h / 2;
+		} else {
+			new_top = w->cursor->byte/16 - (w->h - 1);
+		}
+		if (new_top - w->top->byte/16 < w->h)
+			nscrlup(w->t->t, w->y, w->y + w->h, (int) (new_top - w->top->byte/16));
+		else {
+			msetI(w->t->t->updtab + w->y, 1, w->h);
+		}
+		pgoto(w->top, new_top*16);
+	}
+
+	/* Adjust scroll offset */
+	if (w->cursor->byte%16+60 < w->offset) {
+		w->offset = w->cursor->byte%16+60;
+		msetI(w->t->t->updtab + w->y, 1, w->h);
+	} else if (w->cursor->byte%16+60 >= w->offset + w->w) {
+		w->offset = w->cursor->byte%16+60 - (w->w - 1);
+		msetI(w->t->t->updtab + w->y, 1, w->h);
+	}
+}
+
+/* For text */
+
+void bwfllwt(BW *w)
 {
 	P *newtop;
 	int x;
 
-	if (w->o.hex) {
-		/* Top must be a muliple of 16 bytes */
-		if (w->top->byte%16) {
-			pbkwd(w->top,w->top->byte%16);
-		}
-
-		/* Move backward */
-		if (w->cursor->byte < w->top->byte) {
-			long new_top = w->cursor->byte/16;
-			if (mid) {
-				if (new_top >= w->h / 2)
-					new_top -= w->h / 2;
-				else
-					new_top = 0;
-			}
-			if (w->top->byte/16 - new_top < w->h)
-				nscrldn(w->t->t, w->y, w->y + w->h, (int) (w->top->byte/16 - new_top));
-			else
-				msetI(w->t->t->updtab + w->y, 1, w->h);
-			pgoto(w->top,new_top*16);
-		}
-
-		/* Move forward */
-		if (w->cursor->byte >= w->top->byte+(w->h*16)) {
-			long new_top;
-			if (mid) {
-				new_top = w->cursor->byte/16 - w->h / 2;
-			} else {
-				new_top = w->cursor->byte/16 - (w->h - 1);
-			}
-			if (new_top - w->top->byte/16 < w->h)
-				nscrlup(w->t->t, w->y, w->y + w->h, (int) (new_top - w->top->byte/16));
-			else {
-				msetI(w->t->t->updtab + w->y, 1, w->h);
-			}
-			pgoto(w->top, new_top*16);
-		}
-
-		/* Adjust scroll offset */
-		if (w->cursor->byte%16+60 < w->offset) {
-			w->offset = w->cursor->byte%16+60;
-			msetI(w->t->t->updtab + w->y, 1, w->h);
-		} else if (w->cursor->byte%16+60 >= w->offset + w->w) {
-			w->offset = w->cursor->byte%16+60 - (w->w - 1);
-			msetI(w->t->t->updtab + w->y, 1, w->h);
-		}
-		return;
-	} if (!pisbol(w->top)) {
+	if (!pisbol(w->top)) {
 		p_goto_bol(w->top);
 	}
 
@@ -171,6 +177,16 @@ void bwfllw(BW *w)
 		w->offset = w->cursor->xcol - (w->w - 1);
 		msetI(w->t->t->updtab + w->y, 1, w->h);
 	}
+}
+
+/* For either */
+
+void bwfllw(BW *w)
+{
+	if (w->o.hex)
+		bwfllwh(w);
+	else
+		bwfllwt(w);
 }
 
 /* Determine highlighting state of a particular line on the window.
@@ -807,7 +823,7 @@ static void gennum(BW *w, int *screen, int *attr, SCRN *t, int y, int *comp)
 	}
 }
 
-void bwgenh(BW *w,long from,long to)
+void bwgenh(BW *w)
 {
 	int *screen;
 	int *attr;
@@ -816,6 +832,39 @@ void bwgenh(BW *w,long from,long to)
 	int y;
 	SCRN *t = w->t->t;
 	int flg = 0;
+	long from;
+	long to;
+	int dosquare = 0;
+
+	from = to = 0;
+
+	if (markv(0) && markk->b == w->b)
+		if (square) {
+			from = markb->xcol;
+			to = markk->xcol;
+			dosquare = 1;
+		} else {
+			from = markb->byte;
+			to = markk->byte;
+		}
+	else if (marking && w==maint->curwin->object && markb && markb->b == w->b && w->cursor->byte != markb->byte && !from) {
+		if (square) {
+			from = long_min(w->cursor->xcol, markb->xcol);
+			to = long_max(w->cursor->xcol, markb->xcol);
+			dosquare = 1;
+		} else {
+			from = long_min(w->cursor->byte, markb->byte);
+			to = long_max(w->cursor->byte, markb->byte);
+		}
+	}
+
+	if (marking && w==maint->curwin->object)
+		msetI(t->updtab + w->y, 1, w->h);
+
+	if (dosquare) {
+		from = 0;
+		to = 0;
+	}
 
 	y=w->y;
 	attr = t->attr + y*w->t->w;
@@ -923,15 +972,6 @@ void bwgen(BW *w, int linums)
 
 	if (marking && w==maint->curwin->object)
 		msetI(t->updtab + w->y, 1, w->h);
-
-	if (w->o.hex) {
-		if (dosquare) {
-			from = 0;
-			to = 0;
-		}
-		bwgenh(w,from,to);
-		return;
-	}
 
 	q = pdup(w->cursor);
 
